Скины и внешний вид поля

--- a/index.html
+++ b/index.html
@@ -3,23 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Experiment</title>
-    <style>
-        #area {
-            display: table;
-            margin: 0 auto;
-        }
-        table {
-            text-align: center;
-            font-size: 30px;
-        }
-        tr {
-            height: 30px;
-        }
-        td {
-            width: 30px;
-            border: solid #cfcfcf 1px;
-        }
-    </style>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div id="area"></div>
