--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="area"></div>
-    <h1>Новости</h1>
+    <h1>События</h1>
     <div id="news"></div>
     <script src="ais.js"></script>
 </body>
