--- a/index.html
+++ b/index.html
@@ -48,12 +48,18 @@
     </div>
     <div>
         <label for="period">Время одного тика, мс:</label>
-        <input type="number" id="period" value="2000">
+        <input type="number" id="period" value="4000">
     </div>
     <div>
         <label for="alphabet">Альфавит:</label>
         <input type="number" id="alphabet" value="36">
     </div>
+</div>
+<div id="finish">
+        <h1>Победа</h1>
+        <p>Возраст: 15</p>
+        <p>Съедено: 15</p>
+        <p>Убито: 15</p>
 </div>
 <div id="news_block" class="hidden">
     <h1>События</h1>
