--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<div id="alert" class="alert" style="display: none">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    <div>Сообщение какое-ниубдь</div>
+</div>
 <div id="area"></div>
 <div id="welcome">
     <h1>Evolution</h1>
