--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         непростых условиях игрового мира. Ваши задачи - собирать еду или убивать врагов, в зависимости от выбранной Вами
         тактики развития. Перемещайтесь клавишами <b>w</b>,<b>a</b>,<b>s</b>,<b>d</b>. Остерегайтесь врагов, сильнее
         Вас. Не стойте долго на одном
-        месте, иначе потеряете способность быстро перемещаться. Не допускайте голод.</p>
+        месте, иначе потеряете способность быстро перемещаться. Не допускайте голод. Следите за количеством очков движения.</p>
     <p>Удачи!</p>
-    <p><a class="start" onclick="startGame()">Старт</a></p>
+    <p><a class="button" onclick="startGame()">Старт</a></p>
     <h2>Настройки</h2>
     <div>
         <label for="width">Ширина поля, клеток:</label>
@@ -59,12 +59,7 @@
         <input type="number" id="alphabet" value="36">
     </div>
 </div>
-<div id="finish">
-        <h1>Победа</h1>
-        <p>Возраст: 15</p>
-        <p>Съедено: 15</p>
-        <p>Убито: 15</p>
-</div>
+<div id="modal"></div>
 <div id="news_block" class="hidden">
     <h1>События</h1>
     <div id="news"></div>
