Более точные формулировки

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         непростых условиях игрового мира. Ваши задачи - собирать еду или убивать врагов, в зависимости от выбранной Вами
         тактики развития. Перемещайтесь клавишами <b>w</b>,<b>a</b>,<b>s</b>,<b>d</b>. Остерегайтесь врагов, сильнее
         Вас. Не стойте долго на одном
-        месте, иначе потеряете способность быстро перемещаться. Не допускайте голод. Следите за количеством очков движения.</p>
+        месте, иначе потеряете способность быстро перемещаться. Не допускайте голод. Следите за количеством очков
+        движения.</p>
     <p>Удачи!</p>
     <p><a class="button" onclick="startGame()">Старт</a></p>
     <h2>Настройки</h2>
@@ -52,12 +53,29 @@
     </div>
     <div>
         <label for="period">Время одного тика, мс:</label>
-        <input type="number" id="period" value="4000">
+        <input type="number" id="period" value="2000">
     </div>
     <div>
         <label for="alphabet">Альфавит:</label>
         <input type="number" id="alphabet" value="36">
     </div>
+    <div>
+        <label for="start_points">Очков в начале:</label>
+        <input type="number" id="start_points" value="20">
+    </div>
+    <h2>Характеристики</h2>
+    <p><b>Очки движения.</b> Нужны для перемещения и развития навыков силы и зрения. Пополняются при подборе пищи в
+        случайном количестве от 2.</p>
+    <p><b>Зрение.</b> Определяет зону видимости для существ. Сканирование этого адреса определяет дальнейший ход
+        существа под управлением компьютера.</p>
+    <p><b>Голод.</b> Влияет на выносливость. Чем сильнее существо испытывает голод, тем выше её выносливость.
+        Анулируется
+        при помощи пищи.</p>
+    <p><b>Выносливость.</b> Влияет на возможность существа сражаться и размножаться.</p>
+    <p><b>Сила.</b> Вместе с очками движения влияет на результат исхода в бою. Пополняется случайным образом за счёт
+        очков движения.</p>
+    <p><b>Ген.</b> Существа с различным геном могут размножаться.</p>
+    <p>Нажатие мышкой на существо показывает его характеристики.</p>
 </div>
 <div id="modal"></div>
 <div id="news_block" class="hidden">
