Ссылка на гитхаб

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         очков движения.</p>
     <p><b>Ген.</b> Существа с различным геном могут размножаться.</p>
     <p>Нажатие мышкой на существо показывает его характеристики.</p>
+    <p>Код проекта выложен на <a href="https://github.com/eddir/Evolution">Github</a></p>
 </div>
 <div id="modal"></div>
 <div id="news_block" class="hidden">
