Испарвлено условие победы

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <h2>Характеристики</h2>
     <p><b>Очки движения.</b> Нужны для перемещения и развития навыков силы и зрения. Пополняются при подборе пищи в
         случайном количестве от 2.</p>
-    <p><b>Зрение.</b> Определяет зону видимости для существ. Сканирование этого адреса определяет дальнейший ход
+    <p><b>Зрение.</b> Определяет зону видимости для существ. Сканирование этого радиуса определяет дальнейший ход
         существа под управлением компьютера.</p>
     <p><b>Голод.</b> Влияет на выносливость. Чем сильнее существо испытывает голод, тем выше её выносливость.
         Анулируется
